# doom-drl

./: README.md  _vizdoom.ini  doom.py  eval.py  export.py  install-venv.sh  model_ep200_2_bot.pt  model_ep300_1_bot.pt  model_ep400_1_bot.pt  model_ep500_2_bot_lr1e_6.pt  nohup.out  pyproject.toml  requirements.txt  shell.nix
doom_arena/: __init__.py  doom_env.py  player.py  render.py  reward.py  utils.py
